2002-08-15  Eric Christopher  <echristo@redhat.com>
        * config.sub: Import from master repository.
        * config.guess: Ditto.
2002-08-15  Eric Christopher  <echristo@redhat.com>
	    Jeff Knaggs  <jknaggs@redhat.com>

	* config.gcc (mipsisa64sr71k-elf): New target.
	* config/mips/sr71k.md: New file.
	* config/mips/mips.md: Use it.
	(rot*): Add sr71k specifics.
	* config/mips/t-sr71k: New file.
	* config/mips/mips.h (sr71k): New cpu.
	(TARGET_SR71K): Use it.
	(TUNE_SR71K): Ditto.
	(GENERATE_BRANCHLIKELY): Ditto.
	(ISA_HAS_MULHI, ISA_HAS_MULS, ISA_HAS_MSAC, ISA_HAS_MACC,
	ISA_HAS_ROTR_SIISA_HAS_ROTR_DI): Ditto.
	* config/mips/mips.c (sr71k): New cpu.
	(mips_use_dfa_pipeline_interface): Use.

2002-08-15  Eric Christopher  <echristo@redhat.com>
            Richard Sandiford <rsandifo@redhat.com>
	    Aldy Hernandez  <aldyh@redhat.com>
	    Graham Stott    <grahams@redhat.com>
	    Michael Meissner  <meissner@redhat.com>
	    Gavin Romig-Koch  <gavin@redhat.com>
	    Ken Raeburn  <raeburn@cygnus.com>
	    Alexandre Oliva <aoliva@redhat.com>

	* config.gcc (mips64vr-elf): New target.
	* config/mips/5400.md: New file.
	* config/mips/5500.md: Ditto.
	* config/mips/mips.md: Use them.
	(frsqrt): New.
	* config/mips/mips.c (vr4111, vr4121, vr4320, vr5400, vr5500): New
	cpus.
	(mips_issue_rate): Use them.
	(mips_use_dfa_pipeline_interface): New function. Use for 5400 and 5500.
	(TARGET_SCHEDUSE_DFA_PIPELINE_INTERFACE): Define. Use above.
	* config/mips/mips.h (vr4111, vr4121, vr4320, vr5400, vr5500): New
	cpus.
	(TARGET_MIPSx): Use them.
	(TUNE_MIPSx): Ditto.
	(GETNATE_MULT3_SI): Ditto.
	(ISA_HAS_BRANCHLIKELY): Ditto.
	(ISA_HAS_CONDMOVE): Ditto.
	(ISA_HAS_NMADD_NMSUB): Ditto.
	(ISA_HAS_MULHI): New. Ditto.
	(ISA_HAS_MULS): Ditto.
	(ISA_HAS_MSAC): Ditto.
	(ISA_HAS_MACC): Ditto.
	(ISA_HAS_ROTR_SI): Ditto.
	(ISA_HAS_ROTR_DI): Ditto.
	(RTX_COSTS): Use.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@56471 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-15  Eric Christopher  <echristo@redhat.com>
+
+	* config.sub: Import from master repository.
+	* config.guess: Ditto.
+
 2002-08-19  Alexandre Oliva  <aoliva@redhat.com>
 
 	* Makefile.in (GCC_FOR_TARGET): Prepend STAGE_CC_WRAPPER.
@@ -84,7 +89,7 @@
 	C++ headers if --enable-version-specific-runtime-libs is used.
 
 2002-07-04  Steve Ellcey  <sje@cup.hp.com>
-	
+
 	* ltcf-cxx.sh (hpux*): Modify to support ia64-*-hpux*.
 
 2002-07-03  Nathanael Nerode  <neroden@gcc.gnu.org>
@@ -132,7 +137,7 @@
 2002-06-26  Benjamin Kosnik  <bkoz@redhat.com>
 
 	* config.if (libstdcxx_incdir): Version C++ headers.
-	(cxx_incdir): Remove. 
+	(cxx_incdir): Remove.
 
 2002-06-25  Nathanael Nerode  <neroden@gcc.gnu.org>
 
@@ -168,7 +173,7 @@ Tue Jun 18 22:37:35 2002  Denis Chertykov  <denisc@overta.ru>
 
 	* config.sub: Add support for avr target.
 	Import from master sources, rev 1.255
-	
+
 2002-06-19  Phil Edwards  <pme@gcc.gnu.org>
 
 	* configure, .cvsignore:  Revert previous change...
@@ -376,7 +381,7 @@ Tue Jun 18 22:37:35 2002  Denis Chertykov  <denisc@overta.ru>
 	* configure.in (target_libs): Remove target-libchill.
 	Do not compute CHILL_FOR_TARGET.
 	* libchill: Remove directory.
-	
+
 2002-04-11  DJ Delorie  <dj@redhat.com>
 
 	* Makefile.in, configure.in: Sync with binutils, entries
@@ -559,7 +564,7 @@ Tue Mar 19 09:05:08 2002  J"orn Rennecke <joern.rennecke@superh.com>
 
 	* gcc/Makefile.in: Removed libstdc++-v3 dependancy for libjava and
 	boehm-gc
-	
+
 2002-02-09  Alexandre Oliva  <aoliva@redhat.com>
 
 	* config.guess: Updated to 2002-01-30's version.
@@ -588,8 +593,8 @@ Thu Feb  7 12:40:58 CET 2002  Jan Hubicka  <jh@suse.cz>
 
 2002-01-26  Jason Thorpe  <thorpej@wasabisystems.com>
 
-	* configure.in (*-*-netbsd*): New.  Skip target-newlib, 
-	target-libiberty, and target-libgloss.  Skip Java-related 
+	* configure.in (*-*-netbsd*): New.  Skip target-newlib,
+	target-libiberty, and target-libgloss.  Skip Java-related
 	libraries if not supported for NetBSD on target CPU.
 
 2002-01-25  Douglas B Rupp  <rupp@gnat.com>
