* MAINTAINERS (Write After Approval): Remove myself. 	(Various Maintainers: c++ runtime libs): Add myself.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@56474 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-20  Loren J. Rittle <ljrittle@acm.org>
+
+	* MAINTAINERS (Write After Approval): Remove myself.
+	(Various Maintainers: c++ runtime libs): Add myself.
+
 2002-08-15  Eric Christopher  <echristo@redhat.com>
 
 	* config.sub: Import from master repository.
