--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,6 @@
+2002-08-20  Devang Patel  <dpatel@apple.com>
+	* tree.c (get_qualified_type): Add TYPE_CONTEXT check.
+	
 2002-08-20  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* arc.c (output_shift): Use stdio instead of asm_fprintf.
