--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,6 @@
+2002-08-20  Devang Patel  <dpatel@apple.com>
+	* objc.dg/proto-hier-2.m: New test.
+	
 2002-08-19  Ziemowit Laski  <zlaski@apple.com>
 
 	* objc.dg/bitfield-1.m: New test.
