--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-20  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* dsp16xx.h (dsp16xx_umulhi3_libcall): Delete.
+
 2002-08-20  Devang Patel  <dpatel@apple.com>
 	* tree.c (get_qualified_type): Add TYPE_CONTEXT check.
 	
