* doc/tm.texi (Label Output): Add missing '@end deftypefn'.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@56480 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,7 @@
 2002-08-20  Geoffrey Keating  <geoffk@redhat.com>
 
+	* doc/tm.texi (Label Output): Add missing '@end deftypefn'.
+
 	* unroll.c (biv_total_increment): Don't try to compute the total
 	increment for FP BIVs.
 
