--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2003-08-21  Michael Koch  <konqueror@gmx.de>
+
+	* java/net/Authenticator.java: updated JDK 1.4
+	* java/net/ContentHandler.java: updated JDK 1.4
+
 2002-08-20  Michael Koch  <konqueror@gmx.de>
 
 	* java/net/URISyntaxException.java: New file.
