* doc/tm.texi (TARGET_ASM_GLOBALIZE_LABEL): Move '@end deftypefn' 	to the actual end.  Add '@end table' and '@table @code'.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@56488 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2002-08-21  Andrew Pinski <pinskia@physics.uc.edu>
+            Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* doc/tm.texi (TARGET_ASM_GLOBALIZE_LABEL): Move '@end deftypefn'
+	to the actual end.  Add '@end table' and '@table @code'.
+	
 2002-08-20  Geoffrey Keating  <geoffk@redhat.com>
 
 	* doc/tm.texi (Label Output): Add missing '@end deftypefn'.
