--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-21  Paolo Carlini  <pcarlini@unitus.it>
+
+	* MAINTAINERS (Write After Approval): Remove myself.
+        (Various Maintainers: c++ runtime libs): Add myself.
+
 2002-08-20  Loren J. Rittle <ljrittle@acm.org>
 
 	* MAINTAINERS (Write After Approval): Remove myself.
