--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2002-08-21  Joseph S. Myers  <jsm@polyomino.org.uk>
+
+	* c-decl.c (grokdeclarator): Make invalid combinations with long,
+	short, signed or unsigned into hard errors.  Fixes PR c/4319.
+	Also make duplicate modifiers such as "short short" into hard
+	errors.
+
 2002-08-21  Andrew Pinski <pinskia@physics.uc.edu>
             Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
