--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-21  Joseph S. Myers  <jsm@polyomino.org.uk>
+
+	* gcc.dg/typespec-1.c: New test.
+
 2002-08-20  Devang Patel  <dpatel@apple.com>
 	* objc.dg/proto-hier-2.m: New test.
 	
