--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,14 @@
+2002-08-21  Tom Tromey  <tromey@redhat.com>
+
+	* Makefile.in: Rebuilt.
+	* Makefile.am (ordinary_java_source_files): Added
+	SocketAddress.java, InetSocketAddress.java.
+	* java/net/PortUnreachableException.java: Merged with Classpath.
+	* java/net/SocketTimeoutException.java: Likewise.
+	* java/net/URISyntaxException.java: Likewise.
+	* java/net/SocketAddress.java: New class from Classpath.
+	* java/net/InetSocketAddress.java: Likewise.
+
 2003-08-21  Michael Koch  <konqueror@gmx.de>
 
 	* java/net/Authenticator.java: updated JDK 1.4
