--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,9 @@
+2002-08-21  Tom Tromey  <tromey@redhat.com>
+
+	For PR java/6005 and PR java/7611:
+	* lang.c (LANG_HOOKS_CAN_USE_BITFIELDS_P): New define.
+	(java_can_use_bit_fields_p): New function.
+
 2002-08-16  Tom Tromey  <tromey@redhat.com>
 
 	* gcj.texi (Class Initialization): Mention class initialization of
