--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-22  Hans-Peter Nilsson  <hp@bitrange.com>
+
+	* gengtype-lex.l (ID): Allow underscore as first character.
+
 2002-08-21  David Edelsohn  <edelsohn@gnu.org>
 
 	* config/rs6000/rs6000.c (rs6000_xcoff_asm_globalize_label): New
