* Makefile.in ($(BUILD_PREFIX_1)varray.o): Depend on $(GGC_H).
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@56503 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-22  Alexandre Oliva  <aoliva@redhat.com>
+
+	* Makefile.in ($(BUILD_PREFIX_1)varray.o): Depend on $(GGC_H).
+
 2002-08-22  Hans-Peter Nilsson  <hp@bitrange.com>
 
 	* gengtype-lex.l (ID): Allow underscore as first character.
