--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-22  Tom Tromey  <tromey@redhat.com>
+
+	* doc/install.texi (Configuration): Document --datadir.
+
 2002-08-22  Alexandre Oliva  <aoliva@redhat.com>
 
 	* Makefile.in ($(BUILD_PREFIX_1)varray.o): Depend on $(GGC_H).
