--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-22  Tom Tromey  <tromey@redhat.com>
+
+	* gcj.texi (Invoking gij): Document -cp and -classpath.
+
 2002-08-21  Tom Tromey  <tromey@redhat.com>
 
 	* Make-lang.in (java/jcf-path.o): Use $(datadir), not
