--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2002-08-22  Tom Tromey  <tromey@redhat.com>
+
+	* gij.cc (help): Document -cp and -classpath.
+	(main): Handle -classpath.
+
 2002-08-21  Tom Tromey  <tromey@redhat.com>
 
 	* Makefile.in: Rebuilt.
