--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-22  Mark Mitchell  <mark@codesourcery.com>
+
+	* testsuite/g++.dg/inherit/cond1.C: New test.
+
 2002-08-22  Geoffrey Keating  <geoffk@redhat.com>
 
 	* gcc.dg/noncompile/incomplete-1.c: New test.
