--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,12 @@
+2003-08-23  Michael Koch  <konqueror@gmx.de>
+
+	* java/net/URLConnection.java,
+	java/netJarURLConnection.java,
+	gnu/gcj/protocol/core/Connection.java,
+	gnu/gcj/protocol/file/Connection.java,
+	gnu/gcj/protocol/http/Connection.java: Added implementation of
+	getHeaderFields().
+
 2002-08-22  Tom Tromey  <tromey@redhat.com>
 
 	* gij.cc (help): Document -cp and -classpath.
