re PR c++/5607 (No pointer adjustment in covariant return types)
        * langhooks-def.h (LANG_HOOKS_EXPR_SIZE): New macro.
        * langhooks.c (lhd_expr_size): Define default.
        * langhooks.h (struct lang_hooks): Add expr_size.
        * explow.c (expr_size): Call it.
        (int_expr_size): New fn.
        * expr.h: Declare it.
        * expr.c (expand_expr) [CONSTRUCTOR]: Use it to calculate how
        much to store.
cp/
        PR c++/5607
        * search.c (check_final_overrider): No longer static.
        * class.c (update_vtable_entry_for_fn): Call it.
        * cp-tree.h: Adjust.

        * cp-lang.c (LANG_HOOKS_EXPR_SIZE): Define.
        (cp_expr_size): New fn.
        * call.c (convert_arg_to_ellipsis): Promote non-POD warning to error.
        * typeck.c (build_modify_expr): Don't use save_expr on an lvalue.

From-SVN: r56539

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,14 @@
+2002-08-22  Jason Merrill  <jason@redhat.com>
+
+	* langhooks-def.h (LANG_HOOKS_EXPR_SIZE): New macro.
+	* langhooks.c (lhd_expr_size): Define default.
+	* langhooks.h (struct lang_hooks): Add expr_size.
+	* explow.c (expr_size): Call it.
+	(int_expr_size): New fn.
+	* expr.h: Declare it.
+	* expr.c (expand_expr) [CONSTRUCTOR]: Use it to calculate how 
+	much to store.
+
 2002-08-23  Alan Modra  <amodra@bigpond.net.au>
 
 	* config/rs6000/rs6000.c (output_mi_thunk): Don't determine insns
