--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2002-08-23  David Edelsohn  <edelsohn@gnu.org>
+
+	* config/rs6000/rs6000.c (rs6000_elf_select_section): Treat
+	DEFAULT_ABI == ABI_AIX like PIC.  Test PIC & reloc for readonly
+	default.
+	(rs6000_elf_unique_section): Likewise.
+
 2002-08-23  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* ns32k.c (ns32k_globalize_label): Delete.
